# NumericalLibrary2026

./: .gitignore  CMakeLists.txt  MNv11.slnx  MNv11.vcxproj  MNv11.vcxproj.filters  README.md  terminal.txt
data/: f1_newton_analytic_x0_-3000.csv  f1_newton_analytic_x0_-6200.csv  f1_newton_analytic_x0_-9300.csv  f1_newton_analytic_x0_500.csv  f1_newton_numeric_x0_-3000.csv  f1_newton_numeric_x0_-6200.csv  f1_newton_numeric_x0_-9300.csv  f1_newton_numeric_x0_500.csv  f1_secant_x0_-3100_x1_-2900.csv  f1_secant_x0_-6300_x1_-6100.csv  f1_secant_x0_-9400_x1_-9200.csv  f1_secant_x0_400_x1_600.csv  f2_newton_analytic_x0_-900.csv  f2_newton_analytic_x0_900.csv  f2_secant_x0_-1000_x1_-500.csv  f2_secant_x0_500_x1_1000.csv  f3_newton_analytic_x0_3000.csv  f3_newton_analytic_x0_500.csv  f3_newton_analytic_x0_6000.csv  f3_secant_x0_2900_x1_3100.csv  f3_secant_x0_400_x1_600.csv  f3_secant_x0_5900_x1_6100.csv  summary.csv
examples/: MNv11_archived.cpp  demo_odes.cpp  demo_root_finding.cpp  original_MNv11.cpp  original_MNv11_full.cpp  usage_example.cpp
include/: Approximation.h  Integration.h  Interpolation.h  LinearSystems.h  NonlinearEquations.h  NumericalLibrary.h  ODE.h  mynumlib.h
src/: Approximation.cpp  Integration.cpp  Interpolation.cpp  LinearSystems.cpp  NonlinearEquations.cpp  ODE.cpp  mynumlib.cpp
tests/: test_runner.cpp
